[project]
name = "pytorch-book"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = [
    "torch>=2.7.0",
    "torchvision>=0.22.0",
    "torchaudio>=2.7.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "matplotlib>=3.7.0",
    "scikit-learn>=1.3.0",
    "jupyter>=1.0.0",
    "seaborn>=0.13.2",
    "scipy>=1.13.1",
    "plotly>=6.2.0",
    "openpyxl>=3.1.5",
    "sqlalchemy>=2.0.41",
]

[tool.uv.sources]
torch = [{ index = "pytorch-cu118" }]
torchvision = [{ index = "pytorch-cu118" }]
torchaudio = [{ index = "pytorch-cu118" }]

[[tool.uv.index]]
name = "pytorch-cu118"
url = "https://download.pytorch.org/whl/cu118"
explicit = true

[dependency-groups]
dev = [
    "black>=25.1.0",
    "ipykernel>=6.29.5",
    "mypy>=1.17.0",
    "pytest>=8.4.1",
    "ruff>=0.12.3",
]
